--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,8 @@
 body {
-  font-size: 20px
+  font-size: 20px; 
+  margin: 0;
+  position: relative; 
 }
-
 
 .wrapper {
   width: 720px;
@@ -125,6 +126,14 @@ body {
 
 .message, .win-amount {
   display: block;
+}
+
+.header {
+  height: 50px;
+  background: aquamarine;
+  position: absolute;
+  top: 0;
+  width: 100%
 }
 
 /*# sourceMappingURL=styles.css.map */
