--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,15 @@
+.empty {}
+
+.empty-2 {}
+
 body {
-  font-size: 20px; 
+  font-size: 16px; 
   margin: 0;
-  position: relative; 
+  position: relative;
+  font-family: cursive; 
 }
 
-.wrapper {
-  width: 720px;
+.wrapper {  
   margin: auto;
   display: flex;
   flex-wrap: wrap;
@@ -23,8 +27,7 @@ body {
   position: relative;
   transform: rotate(36deg);
   will-change: transform;
-  font-size: 20px
-
+  font-size: 20px;
 }
 
 .line {
@@ -93,10 +96,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  border: 1px solid black;
-  position: absolute;
-  top: 28%;
-  right: 0;
+  border: 1px solid black;  
   border-radius: 7%;
   background: slategrey;
 }
@@ -104,24 +104,27 @@ body {
 .betting-block input,
 .betting-block button,
 .betting-block select {
-  font-size: 20px;
+  font-size: 16px;
   width: 125px;
   box-sizing: border-box;
+  font-family: cursive;
 }
 
 .betting-block button, .button button {
   width: 125px;
-  font-size: 20px;
+  font-size: 16px;
   justify-content: center;
   height: 39px;
   border-radius: 14px;  
   background: lawngreen;
-  border: 0
+  border: 0;
+  font-family: cursive;
 }
 
 .winner {
   margin: 10px;
-  width: 350px
+  width: 350px;
+  text-align: center;
 }
 
 .message, .win-amount {
@@ -129,11 +132,17 @@ body {
 }
 
 .header {
-  height: 50px;
-  background: aquamarine;
-  position: absolute;
+  height: 61px;
+  background: lawngreen;  
   top: 0;
-  width: 100%
+  width: 100%;
+  display: flex;
+  align-items: center; 
+}
+
+.account {  
+  text-align: right;
+  margin: auto;
 }
 
 /*# sourceMappingURL=styles.css.map */
